--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="PT-BR">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lavyne Boutique</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="../assets/logo.png" type="image/png" />
+    <link rel="icon" href="./assets/logo.png" type="image/png" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
@@ -15,7 +15,9 @@
   <body>
     <div class="all">
       <div id="Logo">
-        <div><img src="../assets/logo.png" alt="" /></div>
+        <div>
+          <img src="./assets/logo.png" alt="" />
+        </div>
         <div id="Insta">
           <strong>@LavyneBoutique</strong>
         </div>
