--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
           <img src="./assets/logo.png" alt="" />
         </div>
         <div id="Insta">
-          <strong>@LavyneBoutique</strong>
+          <strong
+            ><a href="https://www.instagram.com/lavyneboutique/"
+              >@lavyneboutique</a
+            ></strong
+          >
         </div>
       </div>
       <div id="Buttons">
@@ -36,7 +40,7 @@
         </div>
       </div>
       <div id="Share">
-        <button>
+        <button id="Share-btn">
           <span class="material-symbols-outlined"> ios_share </span>
         </button>
       </div>
